--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: recipes_food_development
+  username: postgres
+  password: Sebuzukira250
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +60,8 @@ development:
 test:
   <<: *default
   database: recipes_food_test
+  username: postgres
+  password: Sebuzukira250
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,5 +86,3 @@ test:
 production:
   <<: *default
   database: recipes_food_production
-  username: recipes_food
-  password: <%= ENV["RECIPES_FOOD_DATABASE_PASSWORD"] %>
